infrastructure/networking/traefik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
  namespace: traefik
spec:
  hostnames:
    - traefik.relyq.dev
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: api@internal
          kind: TraefikService
--- # traefik-oidc-auth
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc
  namespace: traefik
spec:
  hostnames:
    - auth.relyq.dev
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: noop@internal
          kind: TraefikService
