infrastructure/networking/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.relyq.dev`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-dashboard-tls
